Make tooltips only appear on mobile/tablet Make the website work well on mobile/tablet Fix potential incompatibility with browsers ('unload' event may not be defined) Other small improvements to website layout/useability

--- a/css/editor_theme.css
+++ b/css/editor_theme.css
@@ -2,7 +2,27 @@
 Based off default Base16 Light Default theme
 */
 
-.cm-s-custom.CodeMirror { background: #f5f5f5; font-size: 20px; font-family: 'Abel'; line-height: 30px; }
+.cm-s-custom.CodeMirror {
+    background: #f5f5f5; 
+    font-size: 1.19vw; 
+    font-family: 'Abel'; 
+    line-height: 1.78vw; 
+}
+
+@media screen and (min-width: 1680px) {
+    .cm-s-custom.CodeMirror {
+        font-size: 20px;
+        line-height: 30px;
+    }
+}
+
+@media screen and (max-width: 1512px) {
+    .cm-s-custom.CodeMirror {
+        font-size: 18px;
+        line-height: 27px;
+    }
+}
+
 .cm-s-custom div.CodeMirror-selected { background: #e0e0e0; }
 .cm-s-custom .CodeMirror-line::selection, .cm-s-custom .CodeMirror-line > span::selection, .cm-s-custom .CodeMirror-line > span > span::selection { background: #e0e0e0; }
 .cm-s-custom .CodeMirror-line::-moz-selection, .cm-s-custom .CodeMirror-line > span::-moz-selection, .cm-s-custom .CodeMirror-line > span > span::-moz-selection { background: #e0e0e0; }
@@ -13,13 +33,13 @@ Based off default Base16 Light Default theme
 .cm-s-custom .CodeMirror-cursor { border-left: 3px solid #505050; }
 
 .cm-grouper { color: rgb(78, 78, 78); }
-.cm-statement-set { color: rgb(0, 140, 255); }
+.cm-statement-set { color: rgb(150, 41, 41); font-weight: bold; }
 .cm-statement-separator { color: rgb(177, 158, 231); }
-.cm-conclusion-indicator { color: rgb(158, 199, 223); }
+.cm-conclusion-indicator { color: rgb(22, 22, 22); font-weight: bolder; }
 .cm-identifier { color: rgb(33, 63, 104); font-weight: bold; }
 .cm-identifier-sub { color: rgb(16, 77, 48); }
 .cm-connective { color: rgb(177, 62, 42); font-weight: bold; }
 .cm-singular-term { color: rgb(68, 68, 68); }
 .cm-degree { color: rgb(146, 146, 146); }
-.cm-quantifier { color: rgb(177, 62, 42); }
+.cm-quantifier { color: rgb(177, 62, 42); font-weight: bold; }
 .cm-variable { color: rgb(68, 68, 68); }
